Update to working ctrl
